fdo#66071: SfxUndoManager: allow Writer to set modified status properly

If Undo actions are removed due to max undo limit, invalidate the
current empty mark so it is different from sw::UndoManager::m_UndoSaveMark.

Change-Id: I20415f42a77b67e9935c75b12df675ba1c5ef5ec